<resources>
    <string name="app_name">DanaTest_v.0.3.0</string>
    <string name="dt_translate">Прямой перевод</string>
    <string name="dt_shuffle">Перемешать</string>
    <string name="dt_variants">Четыре варианта</string>
    <string name="dt_test_restart_test">Начать заново</string>
    <string name="dt_test_end_test">Завершить тест</string>
    <string name="dt_test_counter_with_message">%1$s %2$d/%3$d</string>
    <string name="dt_bottom_navigation_main_title">Главная</string>
    <string name="dt_bottom_navigation_settings">Настройки</string>
    <string name="dt_bottom_navigation_profile">Профиль</string>
    <string name="dt_pairset_fragment_toolbar_title">Наборы</string>
    <string name="dt_pairset_fragment_toolbar_subtitle">Здесь хранятся Ваши наборы</string>
    <string name="dt_pairset_fragment_searchfield_hint">Поиск набора</string>
    <string name="dt_pairset_fragment_toolbar_action_sortBy">Сортировка</string>
    <string name="dt_pairset_fragment_toolbar_action_toSettings">Настройки</string>
    <string name="dt_pairset_fragment_toolbar_sorted_by_name_toast">Сортировка по имени набора</string>
    <string name="dt_pairset_fragment_toolbar_sorted_by_count_toast">Сортировка по количеству пар</string>
    <string name="dt_add_pairset_dialog_title">Новый набор</string>
    <string name="dt_add_pairset_dialog_new_pairset_name_hint">Название</string>
    <string name="dt_add_pairset_dialog_new_pairset_details_hint">Описание</string>
    <string name="dt_add_pairset_dialog_negative_btn">Нет</string>
    <string name="dt_add_pairset_dialog_positive_btn">Добавить</string>
    <string name="dt_add_pairset_dialog_on_empty_title_error">укажите имя набора</string>
    <string name="dt_remove_pairset_dialog_message">Вы действительно хотите\nудалить этот набор?</string>
    <string name="dt_remove_pairset_dialog_negative_btn">нет</string>
    <string name="dt_remove_pairset_dialog_positive_btn">Удалить</string>
    <string name="dt_start_test_dialog_title">Начать тест</string>
    <string name="dt_start_test_dialog_input_layout_hint">Тест:</string>
    <string name="dt_start_test_dialog_on_empty_chosen_test_error">Выберите тест</string>
    <string-array name="dt_test_names_array">
        <item>Четыре варианта</item>
        <item>Прямой перевод</item>
        <item>Перемешать</item>
    </string-array>
    <string name="dt_start_test_dialog_shuffle_checkbox">Перемешать набор</string>
    <string name="dt_start_test_dialog_enable_hints_checkbox">Подсказки</string>
    <string name="dt_start_test_dialog_more_variants_checkbox">Варианты ответа из всех наборов</string>
    <string name="dt_start_test_dialog_negative_btn">Нет</string>
    <string name="dt_start_test_dialog_positive_btn">Начать</string>
    <string name="dt_on_empty_pairset_dialog_title">%1$s  пустой</string>
    <string name="dt_on_empty_pairset_dialog_message">Невозможно начать тестирование\nс пустым набором</string>
    <string name="dt_on_empty_pairset_dismiss_button">Ок</string>
    <string name="dt_sort_pairset_list_dialog_title">Отсортировать наборы</string>
    <string name="dt_sort_pairset_list_dialog_sort_by_name_ascending">В алфавитном порядке</string>
    <string name="dt_sort_pairset_list_dialog_sort_by_name_descending">В обратном порядке</string>
    <string name="dt_sort_pairset_list_dialog_sort_by_count_ascending">Сначала мало пар</string>
    <string name="dt_sort_pairset_list_dialog_sort_by_count_descending">Сначала много пар</string>
    <string name="dt_sort_pairset_list_dialog_sort_by_date_ascending">Сначала новые</string>
    <string name="dt_sort_pairset_list_dialog_sort_by_date_descending">Сначала старые</string>
    <string name="dt_sort_pair_list_dialog_title">Отсортировать пары</string>
    <string name="dt_sort_pair_list_on_key_ascending">По ключу в алфавитном порядке</string>
    <string name="dt_sort_pair_list_on_key_descending">По ключу в обратном порядке</string>
    <string name="dt_sort_pair_list_on_value_ascending">По значению в алфавитном порядке</string>
    <string name="dt_sort_pair_list_on_value_descending">По значению в обратном порядке</string>
    <string name="dt_on_remove_pairset_snackBar_title">Набор \"%1$s\" удален</string>
    <string name="dt_on_remove_pairset_snackBar_action_text">Отмена</string>
    <string name="dt_on_test_result_dialog_mistake_count_line_has_mistakes">Ошибки: %1$d</string>
    <string name="dt_on_test_result_dialog_mistake_count_line_no_mistakes">Тест пройдет без ошибок!</string>
    <string name="dt_on_test_result_dialog_hint_used_count_line">Подсказки: %1$d</string>
    <string name="dt_on_test_result_dialog_restart_test">Рестарт</string>
    <string name="dt_on_test_result_dialog_back_to_pairset_screen">В наборы</string>
    <string name="dt_pairset_editor_toolbar_title_stub">PairsetTitle</string>
    <string name="dt_pairset_editor_toolbar_subtitle_stub">PairsetSubtitle</string>
    <string name="dt_pairset_editor_toolbar_action_sortBy">Сортировать пары</string>
    <string name="dt_pairset_editor_searchfield_hint">Поиск слова</string>
    <string name="dt_pairset_editor_searchfield_hint_autofill">search for value</string>
    <string name="dt_pairset_editor_searchfield_btn_close_search_content_description">Очистить поле поиска</string>
    <string name="dt_pairset_editor_on_empty_pairset_stub">Здесь пока ничего нет…</string>
    <string name="dt_pairset_editor_fab_add_new_pair_content_description">Добавить новую пару</string>
    <string name="dt_add_pair_dialog_title">Новая пара</string>
    <string name="dt_add_pair_dialog_new_pair_key_hint">Ключ</string>
    <string name="dt_add_pair_dialog_new_pair_value_hint">Значение</string>
    <string name="dt_add_pair_dialog_negative_btn">Нет</string>
    <string name="dt_add_pair_dialog_positive_btn">Добавить</string>
    <string name="dt_on_remove_reward_information_title">Внимание</string>
    <string name="dt_on_remove_reward_information_body">При изменении/добавлении\ пары - результаты пройденных тестов будут сброшены</string>
    <string name="dt_on_remove_reward_information_icon_content_description">Информация</string>
    <string name="dt_remove_pair_dialog_title">%1$s - %2$s</string>
    <string name="dt_remove_pair_dialog_message">Вы действительно хотите удалить\nэту пару?</string>
    <string name="dt_remove_pair_dialog_negative_btn">Нет</string>
    <string name="dt_remove_pair_dialog_positive_btn">Удалить</string>
    <string name="dt_on_remove_pair_snackBar_title">Пара \"%1$s — %2$s\" удалена</string>
    <string name="dt_on_remove_pair_snackBar_action_text">Отмена</string>
    <string name="dt_add_pair_dialog_empty_key_error">Укажите ключ пары</string>
    <string name="dt_add_pair_dialog_empty_value_error">Укажите значение пары</string>
    <string name="dt_edit_pairset_name_dialog_title">Название набора</string>
    <string name="dt_edit_pairset_name_dialog_positive_btn">Сохранить</string>
    <string name="dt_test_translate_fragment_toolbar_title">@string/dt_translate</string>
    <string name="dt_test_translate_fragment_toolbar_action_restart_test">@string/dt_test_restart_test</string>
    <string name="dt_test_translate_fragment_toolbar_action_end_test">@string/dt_test_end_test</string>
    <string name="dt_test_translate_fragment_answerfield_hint">Ответ:</string>
    <string name="dt_test_translate_fragment_counter_body_with_message">@string/dt_test_counter_with_message</string>
    <string name="dt_test_translate_fragment_counter_body">%1$d/%2$d</string>
    <string name="dt_test_translate_fragment_counter_line">Решено</string>
    <string name="dt_test_translate_fragment_hint_button">Подсказка?</string>
    <string name="dt_restart_test_dialog_title">%1$s</string>
    <string name="dt_restart_test_dialog_message">Вы действительно хотите начать тест заново?</string>
    <string name="dt_restart_test_dialog_negative_btn">Нет</string>
    <string name="dt_restart_test_dialog_positive_btn">Рестарт</string>
    <string name="dt_test_translate_fragment_content_description_btn_confirm">Подтвердить ответ</string>
    <string name="dt_test_variants_fragment_toolbar_title">@string/dt_variants</string>
    <string name="dt_test_variants_fragment_toolbar_action_restart_test">@string/dt_test_restart_test</string>
    <string name="dt_test_variants_fragment_toolbar_action_end_test">@string/dt_test_end_test</string>
    <string name="dt_test_variants_fragment_answerfield_hint">Выберите ответ</string>
    <string name="dt_test_variants_fragment_counter_body_with_message">@string/dt_test_counter_with_message</string>
    <string name="dt_test_variants_fragment_counter_body">%1$d/%2$d</string>
    <string name="dt_test_variants_fragment_abcd_A">a</string>
    <string name="dt_test_variants_fragment_abcd_B">b</string>
    <string name="dt_test_variants_fragment_abcd_C">c</string>
    <string name="dt_test_variants_fragment_abcd_D">d</string>
    <string name="dt_on_test_result_dialog_tv_quest_word_title_line">%1$d. %2$s</string>
    <plurals name="plurals_1">
        <item quantity="zero">%1$d = zero</item>
        <item quantity="one">%1$d = one</item>
        <item quantity="two">%1$d = two</item>
        <item quantity="few">%1$d = few</item>
        <item quantity="many">%1$d = many</item>
        <item quantity="other">%1$d = other</item>
    </plurals>
    <plurals name="plurals_2">
        <item quantity="zero">нет наборов</item>
        <item quantity="one">%1$d набор</item>
        <item quantity="two">%1$d набора</item>
        <item quantity="few">%1$d набора</item>
        <item quantity="many">%1$d наборов</item>
        <item quantity="other">%1$d наборов</item>
    </plurals>
    <string name="main_activity_title">Доступные тесты</string>
    <string name="translate">Прямой перевод</string>
    <string name="variants">Четыре варианта</string>
    <string name="shuffle">Перемешать</string>
    <string name="translate_description_light">Укажите корректный перевод предложенного слова</string>
    <string name="variants_description_light">Выберите верный перевод слова из предложенных вариантов</string>
    <string name="shuffle_description_light">Отгадайте слово, буквы в  котором случайно перемешаны</string>
    <string name="menu_item_profile_title">Профиль</string>
    <string name="menu_item_pair_set_title">Наборы</string>
    <string name="menu_item_home_title">Тесты</string>
    <string name="menu_item_stats_title">Статистика</string>
    <string name="menu_item_settings_title">Настройки</string>
    <string name="no_mistakes">
        Части тела \n
        Великобритания \n
        Лицо и его части \n
        Кухня \n
        Животные</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_text">Список названий месяцев, дней неделии других констант измерения времени.</string>
    <string name="home_bs_details_translate">По мере прохождения данного теста на экране будут появляться слова из выбранного набора. Ваша задача - при помощи клавиатуры ввести корректный перевод предложенного слова. </string>
    <string name="fav_word_set_title">Избранный набор</string>
    <string name="fav_details">Сюда попадают избранные Вами пары\nиз других наборов</string>
    <string name="pair_set_search_field_hint">Поиск набора</string>
    <string name="pair_search_field_hint">Поиск слова</string>
    <string name="test_answer_field_hint">Введите слово</string>
    <string name="remove_dialog_message">Вы действительно хотите удалить\nвыбранный элемент?</string>
    <string name="add_pair_dialog_title">Новая пара</string>
    <string name="add_pair_set_dialog_title">Новый набор</string>
    <string name="add_pair_set_dialog_warning">Название набора не может быть пусты</string>
    <string name="add_pair_set_dialog_no_details">Без описания</string>
    <string name="emptyInputKey">Ключ не задан</string>
    <string name="emptyInputValue">Значение не задано</string>
</resources>