<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/on_reward_remove_information_note_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/information_note_icon"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:contentDescription="@string/dt_on_remove_reward_information_icon_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/dt_on_remove_reward_information_title"
        android:textAppearance="@style/TextAppearance.dt_onRewardRemoveInformationNoteTitleTextStyle"
        app:layout_constraintBottom_toBottomOf="@id/information_note_icon"
        app:layout_constraintStart_toEndOf="@id/information_note_icon"

        app:layout_constraintTop_toTopOf="@id/information_note_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dt_on_remove_reward_information_body"
        android:textAppearance="@style/TextAppearance.dt_onRewardRemoveInformationNoteBodyTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/materialTextView"
        app:layout_constraintTop_toBottomOf="@id/information_note_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>